--- a/GovLink analysis.ipynb
+++ b/GovLink analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path='/Users/brian/BitlyGov.txt'"
+    "path='/BitlyGov.txt'"
    ]
   },
   {
